fix:animal product with total capacity
