# api/docs/swagger.json
@@ -1402,7 +1402,7 @@
                 "tags": [
                     "ANIMAL-PRODUCT"
                 ],
-                "summary": "LIST  PRODUCT ANIMALs BY PRODUCT ID",
+                "summary": "LIST  PRODUCT ANIMALS BY PRODUCT ID",
                 "parameters": [
                     {
                         "type": "integer",
@@ -1675,6 +1675,41 @@
         }
     },
     "definitions": {
+        "models.AnimalCapRes": {
+            "type": "object",
+            "properties": {
+                "category_name": {
+                    "type": "string"
+                },
+                "date_of_birth": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "genus": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "is_health": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "total_capacity": {
+                    "type": "integer"
+                },
+                "weight": {
+                    "type": "number"
+                }
+            }
+        },
         "models.AnimalProdactList": {
             "type": "object",
             "properties": {
@@ -1751,7 +1786,7 @@
                 "animals": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.AnimalRes"
+                        "$ref": "#/definitions/models.AnimalCapRes"
                     }
                 },
                 "count": {
